# SensorHub

./: .dockerignore  .gitignore  README.md  example_fire.py  manage.py  pyproject.toml  sensors.db  verify_migration.py  wsgi.py
bot/: .dockerignore  Dockerfile  guardar.py  main.py  pyproject.toml  real_time.py  validate_config.py  validation.json
models/: db.py  sql_models.py
routers/: api.py  history.py  index.py  stream.py
server/: .dockerignore  Dockerfile  experiment.py  manage.py  pyproject.toml  wsgi.py
server/models/: db.py
server/routers/: api.py  history.py  index.py  stream.py
server/services/: broadcaster.py  sensor_worker.py
server/static/js/: app.js  config.js  ui.js  utils.js
server/templates/: index.html  index_old.html
services/: broadcaster.py  sensor_worker.py
static/: app.js  arduino.ino  style.css
static/css/: style.css
static/js/: api.js  app.js  config.js  ui.js  utils.js
templates/: index.html
test/: debug_redis.py  esp32_simulator.py  verify_config.py  verify_migration.py
